# EN325-Advanced-digital-design

./: .gitignore  README.md
Partie-1/: README.md
Partie-1/1_Software/: README.md
Partie-1/1_Software/Etape_1/: Makefile
Partie-1/1_Software/Etape_6/: Makefile  main.c.gcov  pgcd.c.gcov  stdio2.h.gcov
Partie-1/1_Software/Etape_7/: Makefile
Partie-1/1_Software/Etape_8/: Makefile
Partie-2/: README.md
Partie-2/Question_1/: CMakeLists.txt  Makefile
Partie-2/Question_1/src/: main.cpp
Partie-2/Question_2/: CMakeLists.txt  Makefile
Partie-2/Question_2/src/: RGB2YUV.hpp  YUV2RGB.hpp  main.cpp
Partie-2/Question_2/src/color/: RGB2YUV.cpp  RGB2YUV.hpp  YUV2RGB.cpp  YUV2RGB.hpp
Partie-2/Question_2/src/tools/: analysis.cpp  analysis.hpp  bmp.hpp  converter.cpp  img_diff.cpp
Partie-3/: README.md
Partie-3/1_ADD_SIGNED/src/: ADD_SIGNED.vhd  ADD_WRAPPER.vhd
Partie-3/2_MUL_SIGNED/src/: MUL_SIGNED.vhd
Partie-4/: README.md
Partie-5/: README.md
Partie-6/: README.md
Partie-7/: README.md
Partie-7/Question_1/: my_module.cpp  my_module.hpp
Partie-8/: README.md
Partie-8/Question_4/: CMakeLists.txt
Partie-8/Question_4/src/: main.cpp
Partie-8/Question_4/src/backend/: jpeg_stream.hpp
Partie-8/Question_4/src/color/: RGB2YUV.hpp
Partie-8/Question_4/src/dct2d/: idct2d_arm.hpp  idct2d_sse.hpp
Partie-8/Question_4/src/decoder/: decoder.hpp
Partie-8/Question_4/src/encoder/: encoder.cpp  encoder.hpp
Partie-8/Question_4/src/packing/: unpacking.hpp
Partie-8/Question_4/src/quantizer/: quantize.hpp
Partie-8/Question_4/src/tools/: img_diff.hpp
(+59 files in other folders)
